--- a/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
+++ b/di-24-zhang-freebsd-te-se/di-24.3-jie-bsdinstall-yu-bsdconfig.md
@@ -22,14 +22,14 @@
 会输出：
 
 ```sh
-┌────────────────────┤Main Menu├───────────────────┐
+┌--------------------┤Main Menu├-------------------┐
 │ If you've already installed FreeBSD, you may use │
 │ this menu to customize it somewhat to suit your  │
 │ particular configuration.  Most importantly, you │
 │ can use the Packages utility to load extra '3rd  │
 │ party' software not provided in the base         │
 │ distributions.                                   │
-│ ┌──────────────────────────────────────────────┐ │
+│ ┌----------------------------------------------┐ │
 │ │         X Exit                               │ │
 │ │         1 Usage                              │ │
 │ │         2 Documentation installation         │ │
@@ -44,10 +44,10 @@
 │ │         B Security                           │ │
 │ │         C Startup                            │ │
 │ │         D Ttys                               │ │
-│ └──────────────────────────────────────────────┘ │
-├──────────────────────────────────────────────────┤
+│ └----------------------------------------------┘ │
+├--------------------------------------------------┤
 │[      OK      ] [Exit bsdconfig] [     Help     ]│
-└──────────────────────────────────────────────────┘
+└--------------------------------------------------┘
 ```
 
 快捷键：选项由空格分隔，如 `1 Usage` 代表按数字键 `1` 可以选中该选项；`A Networking Management`，必须按大写的 `A` 才能选择此项。
@@ -122,14 +122,14 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ## 2 Documentation installation 安装文档
 
 ```sh
-┌───────────────┤FreeBSD Documentation Installation├───────────────┐
+┌---------------┤FreeBSD Documentation Installation├---------------┐
 │ This menu allows you to install the whole documentation set from │
 │ the FreeBSD Documentation Project: Handbook, FAQ, and articles.  │
 │                                                                  │
 │ Please select the language versions you wish to install. At      │
 │ minimum, you should install the English version, the original    │
 │ version of the documentation.                                    │
-│ ┌──────────────────────────────────────────────────────────────┐ │
+│ ┌--------------------------------------------------------------┐ │
 │ │         [ ] bn    Bengali Documentation                      │ │
 │ │         [ ] da    Danish Documentation                       │ │
 │ │         [ ] de    German Documentation                       │ │
@@ -148,10 +148,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 │ │         [ ] pt    Portuguese Documentation                   │ │
 │ │         [ ] ru    Russian Documentation                      │ │
 │ │         [ ] tr    Turkish Documentation                      │ │
-│ └─↓↓↓───────────────────────────────────────────────────── 90%─┘ │
-├──────────────────────────────────────────────────────────────────┤
+│ └-↓↓↓----------------------------------------------------- 90%-┘ │
+├------------------------------------------------------------------┤
 │                       [  OK  ]     [Cancel]                      │
-└───────────────── Use arrows, SPACE, TAB or ENTER ────────────────┘
+└----------------- Use arrows, SPACE, TAB or ENTER ----------------┘
 ```
 
 没什么可说的，就是安装对应语言环境的文档。
@@ -164,13 +164,13 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 ```sh
 
-┌───────────────────────┤Choose Installation Media├───────────────────────┐
+┌-----------------------┤Choose Installation Media├-----------------------┐
 │ FreeBSD can be installed from a variety of different installation       │
 │ media, ranging from floppies to an Internet FTP server.  If you're      │
 │ installing FreeBSD from a supported CD/DVD drive then this is generally │
 │ the best media to use if you have no overriding reason for using other  │
 │ media.                                                                  │
-│ ┌─────────────────────────────────────────────────────────────────────┐ │
+│ ┌---------------------------------------------------------------------┐ │
 │ │   1 CD/DVD      Install from a FreeBSD CD/DVD                       │ │
 │ │   2 HTTP Proxy  Install from an FTP server through an HTTP proxy    │ │
 │ │   3 HTTP Direct Install from an HTTP server                         │ │
@@ -180,10 +180,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 │ │   7 UFS         Install from a UFS partition                        │ │
 │ │   8 USB         Install from a USB drive                            │ │
 │ │   X Options     View/Set various media options                      │ │
-│ └─────────────────────────────────────────────────────────────────────┘ │
-├─────────────────────────────────────────────────────────────────────────┤
+│ └---------------------------------------------------------------------┘ │
+├-------------------------------------------------------------------------┤
 │                   [  OK  ]     [Cancel]     [ Help ]                    │
-└────── Choose Help for more information on the various media types ──────┘
+└------ Choose Help for more information on the various media types ------┘
                  
 ```
 
@@ -206,20 +206,20 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 请选择最适合您的站点，或者选择其他的以指定不同的选项。 “Main Site”会通过 GeoDNS 将用户引导到最近的项目管理镜像站点（它们提供完整的分发文件且支持 IPv4 和 IPv6）。所有其他站点被称为“社区镜像站”；并非所有列出的站点都提供超过基础分发包的内容。请选择一个站点！
 
 ```sh
-              ┌─────────────┤Please select a FreeBSD HTTP distribution site├─────────────┐
+              ┌-------------┤Please select a FreeBSD HTTP distribution site├-------------┐
               │ Please select the best suitable site for you or "other" if you want to   │
               │ specify a different choice. The "Main Site" directs users to the nearest │
               │ project managed mirror via GeoDNS (they carry the full range of possible │
               │ distributions and support both IPv4 and IPv6). All other sites are known │
               │ as "Community Mirrors"; not every site listed here carries more than the │
               │ base distribution kits. Select a site!                                   │
-              │ ┌──────────────────────────────────────────────────────────────────────┐ │
+              │ ┌----------------------------------------------------------------------┐ │
               │ │      pkg Main Site (GeoDNS) pkg.freebsd.org                          │ │
               │ │      URL                    Specify some other http site by URL      │ │
-              │ └──────────────────────────────────────────────────────────────────────┘ │
-              ├──────────────────────────────────────────────────────────────────────────┤
+              │ └----------------------------------------------------------------------┘ │
+              ├--------------------------------------------------------------------------┤
               │                           [  OK  ]     [Cancel]                          │
-              └───────────────────────────── Select a site! ───────────
+              └----------------------------- Select a site! -----------
 ```
 
 若选择“pkg Main Site (GeoDNS) pkg.freebsd.org”，将会还原到 FreeBSD 官方镜像站；
@@ -227,14 +227,14 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 若选择“URL                    Specify some other http site by URL”：
 
 ```sh
-                        ┌──────────────────┤Package Selection├──────────────────┐
+                        ┌------------------┤Package Selection├------------------┐
                         │ Please specify the URL of a FreeBSD distribution on a │
                         │ remote http site.                                     │
                         │ A URL looks like this: http://<hostname>/<path>       │
-                        │ ┌───────────────────────────────────────────────────┐ │
+                        │ ┌---------------------------------------------------┐ │
                         │ │                                                   │ │
-                        │ └───────────────────────────────────────────────────┘ │
-                        ├───────────────────────────────────────────────────────┤
+                        │ └---------------------------------------------------┘ │
+                        ├-------------------------------------------------------┤
                         │                 [  OK  ]     [Cancel]
 ```
 
@@ -243,8 +243,8 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ### Options
 
 ```sh
-                                  ──────────┤Options Editor├───────────┐
-                                 │ ┌─────────────────────────────────┐ │
+                                  ----------┤Options Editor├-----------┐
+                                 │ ┌---------------------------------┐ │
                                  │ │  NFS Secure      NO             │ │
                                  │ │  NFS Slow        NO             │ │
                                  │ │  NFS TCP         NO             │ │
@@ -260,10 +260,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                                  │ │  Package Temp    /var/tmp       │ │
                                  │ │  Re-scan Devices <*>            │ │
                                  │ │  Use Defaults    [RESET!]       │ │
-                                 │ └─────────────────────────────────┘ │
-                                 ├─────────────────────────────────────┤
+                                 │ └---------------------------------┘ │
+                                 ├-------------------------------------┤
                                  │   [  OK  ]   [ Done ]   [ Help ]    │
-                                 └──── Press arrows, TAB or ENTER ─────
+                                 └---- Press arrows, TAB or ENTER -----
 ```
 
 | **选项**             | **说明**              |  
@@ -291,14 +291,14 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 输入的密码在屏幕上会显示为“***”这种类型。~~真是少见，居然这次有密码回显。~~
 
 ```sh
-                        ┌────────────────────┤Root Password├───────────────────┐
+                        ┌--------------------┤Root Password├-------------------┐
                         │ Enter New Password                                   │
-                        │ ┌──────────────────────────────────────────────────┐ │
+                        │ ┌--------------------------------------------------┐ │
                         │ │                                                  │ │
-                        │ └──────────────────────────────────────────────────┘ │
-                        ├──────────────────────────────────────────────────────┤
+                        │ └--------------------------------------------------┘ │
+                        ├------------------------------------------------------┤
                         │                 [  OK  ]     [Cancel]                │
-                        └──── Use alpha-numeric, punctuation, TAB or ENTER ────┘
+                        └---- Use alpha-numeric, punctuation, TAB or ENTER ----┘
 
 ```
 
@@ -306,12 +306,12 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ## 5 Disk Management 磁盘管理
 
 ```sh
-                         ┌────────────────────┤Partition Editor├───────────────┐
+                         ┌--------------------┤Partition Editor├---------------┐
                          │ Create partitions for FreeBSD, F1 for help.         │
                          │ No changes will be made until you select Finish.    │
                          │                                                     │
                          │                                                     │
-                         ├─────────────────────────────────────────────────────┤
+                         ├-----------------------------------------------------┤
                          │  mmcsd0          116 GB    GPT                      │
                          │    mmcsd0p1      260 MB    efi                      │
                          │    mmcsd0p2      116 GB    freebsd-zfs              │
@@ -322,8 +322,8 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                          │    nda0p2        200 GB    ms-basic-data            │
                          │    nda0p3        148 GB    ms-basic-data            │
                          │    nda0p4        85 GB     ms-basic-data            │
-                         ├───vvv────────────────────────────────────────83%────┤
-                         ├─────────────────────────────────────────────────────┤
+                         ├---vvv----------------------------------------83%----┤
+                         ├-----------------------------------------------------┤
                          │[Create] [Delete] [Modify] [Revert] [ Auto ] [Finish]│
 ```
 
@@ -333,8 +333,8 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 
 ```sh
-                                 ┌──────┤Login/Group Management├──────┐
-                                 │ ┌────────────────────────────────┐ │
+                                 ┌------┤Login/Group Management├------┐
+                                 │ ┌--------------------------------┐ │
                                  │ │        X Exit                  │ │
                                  │ │        1 Add Login             │ │
                                  │ │        2 Edit/View Login       │ │
@@ -343,10 +343,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                                  │ │        4 Add Group             │ │
                                  │ │        5 Edit/View Group       │ │
                                  │ │        6 Delete Group          │ │
-                                 │ └────────────────────────────────┘ │
-                                 ├────────────────────────────────────┤
+                                 │ └--------------------------------┘ │
+                                 ├------------------------------------┤
                                  │   [  OK  ]   [Cancel]   [ Help ]   │
-                                 └──── Press arrows, TAB or ENTER ────┘
+                                 └---- Press arrows, TAB or ENTER ----┘
                                    
 ```
 
@@ -367,9 +367,9 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 以我创建的用户账户 ykla 为例：
 
 ```sh
-                              ┌──────────┤Edit/View User: ykla├───────────┐
+                              ┌----------┤Edit/View User: ykla├-----------┐
                               │ Choose Save/Exit when finished or Cancel. │
-                              │ ┌───────────────────────────────────────┐ │
+                              │ ┌---------------------------------------┐ │
                               │ │     X Save/Exit                       │ │
                               │ │     1 Login: ykla                     │ │
                               │ │     2 Full Name: User &               │ │
@@ -384,10 +384,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                               │ │     B Shell: /bin/sh                  │ │
                               │ │     - Create Home Directory: N/A      │ │
                               │ │     D Create Dotfiles: No             │ │
-                              │ └───────────────────────────────────────┘ │
-                              ├───────────────────────────────────────────┤
+                              │ └---------------------------------------┘ │
+                              ├-------------------------------------------┤
                               │           [  OK  ]     [Cancel]           │
-                              └─────── Press arrows, TAB or ENTER ────────┘
+                              └------- Press arrows, TAB or ENTER --------┘
                                 
 ```
 
@@ -416,18 +416,18 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 以我创建的用户账户 ykla 所在 ykla 组为例：
 
 ```sh
-                              ┌──────────┤Edit/View Group: ykla├──────────┐
+                              ┌----------┤Edit/View Group: ykla├----------┐
                               │ Choose Save/Exit when finished or Cancel. │
-                              │ ┌───────────────────────────────────────┐ │
+                              │ ┌---------------------------------------┐ │
                               │ │           X Save/Exit                 │ │
                               │ │           1 Group: ykla               │ │
                               │ │           2 Password: -----           │ │
                               │ │           3 Group ID: 1001            │ │
                               │ │           4 Group Members:            │ │
-                              │ └───────────────────────────────────────┘ │
-                              ├───────────────────────────────────────────┤
+                              │ └---------------------------------------┘ │
+                              ├-------------------------------------------┤
                               │           [  OK  ]     [Cancel]           │
-                              └─────── Press arrows, TAB or ENTER ────────┘
+                              └------- Press arrows, TAB or ENTER --------┘
                                 
 ```
 
@@ -442,12 +442,12 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ## 7 Console 终端
 
 ```sh
-                 ┌───────────────────┤System Console Configuration├────────────────────┐
+                 ┌-------------------┤System Console Configuration├--------------------┐
                  │ The system console driver for FreeBSD has a number of configuration │
                  │ options which may be set according to your preference.              │
                  │                                                                     │
                  │ When you are done setting configuration options, select Cancel.     │
-                 │ ┌─────────────────────────────────────────────────────────────────┐ │
+                 │ ┌-----------------------------------------------------------------┐ │
                  │ │          X Exit      Exit this menu                             │ │
                  │ │          2 Font      Choose an alternate screen font            │ │
                  │ │          3 Keymap    Choose an alternate keyboard map           │ │
@@ -455,10 +455,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                  │ │          5 Saver     Configure the screen saver                 │ │
                  │ │          6 Screenmap Choose an alternate screenmap              │ │
                  │ │          7 Ttys      Choose console terminal type               │ │
-                 │ └─────────────────────────────────────────────────────────────────┘ │
-                 ├─────────────────────────────────────────────────────────────────────┤
+                 │ └-----------------------------------------------------------------┘ │
+                 ├---------------------------------------------------------------------┤
                  │                        [  OK  ]     [Cancel]                        │
-                 └────────────── Configure your system console settings ───────────────┘
+                 └-------------- Configure your system console settings ---------------┘
 
 ```
 
@@ -489,7 +489,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 启用鼠标守护进程后，您可以在运行 X 配置工具时将 `/dev/sysmouse` 作为鼠标设备，并将 `SysMouse` 或 `MouseSystems` 作为鼠标协议（参见配置菜单）。
 
 ```sh
-               ┌──────────────────────┤Please configure your mouse├─────────────────────┐
+               ┌----------------------┤Please configure your mouse├---------------------┐
                │ You can cut and paste text in the text console by running the mouse    │
                │ daemon.  Specify a port and a protocol type of your mouse and enable   │
                │ the mouse daemon.  If you don't want this feature, select 6 to disable │
@@ -498,17 +498,17 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                │ as your mouse device and "SysMouse" or "MouseSystems" as mouse         │
                │ protocol when running the X configuration utility (see Configuration   │
                │ menu).                                                                 │
-               │ ┌────────────────────────────────────────────────────────────────────┐ │
+               │ ┌--------------------------------------------------------------------┐ │
                │ │               X Exit    Exit this menu                             │ │
                │ │               2 Enable  Test and run the mouse daemon              │ │
                │ │               3 Type    Select mouse protocol type                 │ │
                │ │               4 Port    Select mouse port                          │ │
                │ │               5 Flags   Set additional flags                       │ │
                │ │               6 Disable Disable the mouse daemon                   │ │
-               │ └────────────────────────────────────────────────────────────────────┘ │
-               ├────────────────────────────────────────────────────────────────────────┤
+               │ └--------------------------------------------------------------------┘ │
+               ├------------------------------------------------------------------------┤
                │                          [  OK  ]     [Cancel]                         │
-               └────────────────────────────────────────────────────────────────────────┘
+               └------------------------------------------------------------------------┘
 ```
 
 |菜单 | 说明 |
@@ -523,15 +523,15 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ### 2 Enable 启用测试并运行鼠标守护进程
 
 ```sh
-                         ┌────────────┤User Confirmation Requested├───────────┐
+                         ┌------------┤User Confirmation Requested├-----------┐
                          │ Now move the mouse and see if it works.            │
                          │ (Note that buttons don't have any effect for now.) │
                          │                                                    │
                          │          Is the mouse cursor moving?               │
                          │                                                    │
-                         ├────────────────────────────────────────────────────┤
+                         ├----------------------------------------------------┤
                          │                [ Yes  ]     [  No  ]               │
-                         └──────────── Press arrows, TAB or ENTER ────────────┘
+                         └------------ Press arrows, TAB or ENTER ------------┘
 
 现在移动鼠标，看看鼠标是否能动。  
 （请注意，鼠标的按钮目前无效。）  
@@ -543,7 +543,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 如果你的鼠标连接到 PS/2 鼠标端口和总线鼠标端口，你应该始终选择“Auto”，无论鼠标的型号和品牌是什么。所有其他协议类型适用于串口鼠标，不应与 PS/2 端口鼠标或总线鼠标一起使用。如果你有串口鼠标，并且不确定它的协议，你也应该尝试选择“Auto”。如果鼠标不支持即插即用（PnP）标准，可能无法正常工作，但也不会有坏处。许多 2 按钮（左键和右键）串口鼠标与“Microsoft”或“MouseMan”兼容，3 按钮串口鼠标（左右键、中间按钮）可能与“MouseSystems”或“MouseMan”兼容。如果串口鼠标有滚轮，它可能与“IntelliMouse”兼容。
 
 ```sh
-              ┌──────────────────┤Select a protocol type for your mouse├──────────────────┐
+              ┌------------------┤Select a protocol type for your mouse├------------------┐
               │ If your mouse is attached to the PS/2 mouse port or the bus mouse port,   │
               │ you should always choose "Auto", regardless of the model and the brand    │
               │ of the mouse.  All other protocol types are for serial mice and should    │
@@ -554,7 +554,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
               │ are compatible with "Microsoft" or "MouseMan". 3-button serial mice       │
               │ may be compatible with "MouseSystems" or "MouseMan".  If the serial       │
               │ mouse has a wheel, it may be compatible with "IntelliMouse".              │
-              │ ┌───────────────────────────────────────────────────────────────────────┐ │
+              │ ┌-----------------------------------------------------------------------┐ │
               │ │    1 Auto          Bus mouse, PS/2 style mouse or PnP serial mouse    │ │
               │ │    2 GlidePoint    ALPS GlidePoint pad (serial)                       │ │
               │ │    3 Hitachi       Hitachi tablet (serial)                            │ │
@@ -565,10 +565,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
               │ │    8 MouseMan      Logitech MouseMan/TrackMan models (serial)         │ │
               │ │    9 MouseSystems  MouseSystems protocol (serial)                     │ │
               │ │    A ThinkingMouse Kensington ThinkingMouse (serial)                  │ │
-              │ └───────────────────────────────────────────────────────────────────────┘ │
-              ├───────────────────────────────────────────────────────────────────────────┤
+              │ └-----------------------------------------------------------------------┘ │
+              ├---------------------------------------------------------------------------┤
               │                           [  OK  ]     [Cancel]                           │
-              └───────────────────────────────────────────────────────────────────────────┘
+              └---------------------------------------------------------------------------┘
 ```
 
 | 菜单 | 说明 |
@@ -588,18 +588,18 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 ```sh
 
-                                 ┌────────┤Network Management├────────┐
-                                 │ ┌────────────────────────────────┐ │
+                                 ┌--------┤Network Management├--------┐
+                                 │ ┌--------------------------------┐ │
                                  │ │    X Exit                      │ │
                                  │ │    1 Hostname/Domain           │ │
                                  │ │    2 Network Interfaces        │ │
                                  │ │    3 Wireless Networks         │ │
                                  │ │    4 Default Router/Gateway    │ │
                                  │ │    5 DNS nameservers           │ │
-                                 │ └────────────────────────────────┘ │
-                                 ├────────────────────────────────────┤
+                                 │ └--------------------------------┘ │
+                                 ├------------------------------------┤
                                  │        [  OK  ]     [Cancel]       │
-                                 └──── Press arrows, TAB or ENTER ────┘
+                                 └---- Press arrows, TAB or ENTER ----┘
 
 ```
 | 菜单 | 说明|
@@ -620,20 +620,20 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 ```sh
 
-             ┌───────────────────────┤System Security Options Menu├───────────────────────┐
+             ┌-----------------------┤System Security Options Menu├-----------------------┐
              │ This menu allows you to configure aspects of the operating system security │
              │ policy.  Please read the system documentation carefully before modifying   │
              │ these settings, as they may cause service disruption if used improperly.   │
              │                                                                            │
              │ Most settings will take effect only following a system reboot.             │
-             │ ┌────────────────────────────────────────────────────────────────────────┐ │
+             │ ┌------------------------------------------------------------------------┐ │
              │ │    X Exit            Exit this menu                                    │ │
              │ │    2 [ ] Securelevel Configure securelevels for the system             │ │
              │ │    3 [X] NFS port    Require that the NFS clients use reserved ports   │ │
-             │ └────────────────────────────────────────────────────────────────────────┘ │
-             ├────────────────────────────────────────────────────────────────────────────┤
+             │ └------------------------------------------------------------------------┘ │
+             ├----------------------------------------------------------------------------┤
              │                            [  OK  ]     [Cancel]                           │
-             └──────────────────────── Press arrows, TAB or ENTER ────────────────────────┘
+             └------------------------ Press arrows, TAB or ENTER ------------------------┘
 
 ```
 
@@ -651,7 +651,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 
 
 ```sh
-              ┌─────────────────────┤Securelevel Configuration Menu├─────────────────────┐
+              ┌---------------------┤Securelevel Configuration Menu├---------------------┐
               │ This menu allows you to select the securelevel your system runs with.    │
               │ When operating at a securelevel, certain root privileges are disabled,   │
               │ which may increase resistance to exploits and protect system integrity.  │
@@ -661,15 +661,15 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
               │ modified on-disk, tampering with the system clock is prohibited.  In     │
               │ network secure mode configuration changes to firewalling are prohibited. │
               │                                                                          │
-              │ ┌──────────────────────────────────────────────────────────────────────┐ │
+              │ ┌----------------------------------------------------------------------┐ │
               │ │                  Disabled       Disable securelevels                 │ │
               │ │                  Secure         Secure mode                          │ │
               │ │                  Highly Secure  Highly secure mode                   │ │
               │ │                  Network Secure Network secure mode                  │ │
-              │ └──────────────────────────────────────────────────────────────────────┘ │
-              ├──────────────────────────────────────────────────────────────────────────┤
+              │ └----------------------------------------------------------------------┘ │
+              ├--------------------------------------------------------------------------┤
               │                    [  OK  ]     [Cancel]     [ Help ]                    │
-              └─────────────────── Select a securelevel to operate at ───────────────────┘
+              └------------------- Select a securelevel to operate at -------------------┘
 
 ```
 
@@ -680,16 +680,16 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ## C Startup 启动项
 
 ```sh
-                               ┌────────────────┤Startup├───────────────┐
-                               │ ┌────────────────────────────────────┐ │
+                               ┌----------------┤Startup├---------------┐
+                               │ ┌------------------------------------┐ │
                                │ │  X Exit                            │ │
                                │ │  1 Toggle Startup Services         │ │
                                │ │  2 View/Edit Startup Configuration │ │
                                │ │  3 Miscellaneous Startup Services  │ │
-                               │ └────────────────────────────────────┘ │
-                               ├────────────────────────────────────────┤
+                               │ └------------------------------------┘ │
+                               ├----------------------------------------┤
                                │          [  OK  ]     [Cancel]         │
-                               └────── Press arrows, TAB or ENTER ──────┘
+                               └------ Press arrows, TAB or ENTER ------┘
 ```
 
 | 菜单 |说明|
@@ -702,8 +702,8 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ###  1 Toggle Startup Services 1 切换启动服务
 
 ```sh
-         ┌──────────────────────────────┤Toggle Startup Services├──────────────────────────────┐
-         │ ┌─────────────────────────────────────────────────────────────────────────────────┐ │
+         ┌------------------------------┤Toggle Startup Services├------------------------------┐
+         │ ┌---------------------------------------------------------------------------------┐ │
          │ │ X Exit                     Exit this menu                                       │ │
          │ │ accounting_enable          [ ] /etc/rc.d/accounting; Default: NO                │ │
          │ │  apm_enable                [ ] /etc/rc.d/apm; Default: NO                       │ │
@@ -728,10 +728,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
          │ │  ddb_enable                [ ] /etc/rc.d/ddb; Default: NO                       │ │
          │ │  devd_enable               [X] /etc/rc.d/devd; Default: YES                     │ │
          │ │  devmatch_enable           [X] /etc/rc.d/devmatch; Default: YES                 │ │
-         │ └─↓↓↓──────────────────────────────────────────────────────────────────────── 17%─┘ │
-         ├─────────────────────────────────────────────────────────────────────────────────────┤
+         │ └-↓↓↓------------------------------------------------------------------------ 17%-┘ │
+         ├-------------------------------------------------------------------------------------┤
          │                                [  OK  ]     [Cancel]                                │
-         └──────────────────────────── Press arrows, TAB or ENTER ─────────────────────────────┘
+         └---------------------------- Press arrows, TAB or ENTER -----------------------------┘
 ```
 
 可以开关当前所有可能的系统启动项。
@@ -739,8 +739,8 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ### 2 View/Edit Startup Configuration 2 查看启动配置/编辑启动配置 
 
 ```sh
-                          ┌─────────┤View/Edit Startup Configuration├────────┐
-                          │ ┌──────────────────────────────────────────────┐ │
+                          ┌---------┤View/Edit Startup Configuration├--------┐
+                          │ ┌----------------------------------------------┐ │
                           │ │  X Exit              Return to previous menu │ │
                           │ │  > Add New           Add new directive       │ │
                           │ │  > Delete            Delete directive(s)     │ │
@@ -764,10 +764,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                           │ │  xrdp_enable         YES                     │ │
                           │ │   xrdp_sesman_enable YES                     │ │
                           │ │  zfs_enable          YES                     │ │
-                          │ └──────────────────────────────────────────────┘ │
-                          ├──────────────────────────────────────────────────┤
+                          │ └----------------------------------------------┘ │
+                          ├--------------------------------------------------┤
                           │       [  OK   ]     [Cancel ]     [Details]      │
-                          └─────────── Press arrows, TAB or ENTER ───────────┘
+                          └----------- Press arrows, TAB or ENTER -----------┘
 
 ```
 
@@ -782,17 +782,17 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 #### Details 详情
 
 ```sh
-               ┌──────────────────────────┤Choose View Details├─────────────────────────┐
-               │ ┌────────────────────────────────────────────────────────────────────┐ │
+               ┌--------------------------┤Choose View Details├-------------------------┐
+               │ ┌--------------------------------------------------------------------┐ │
                │ │  R Reset                  Reset to default view settings           │ │
                │ │  D [X] Description        Toggle display of system description     │ │
                │ │  1 (*) Show Value         Show configured startup value (fast)     │ │
                │ │  2 ( ) Show Default/Value Show default/configured values (slow)    │ │
                │ │  3 ( ) Show Configured    Calculate rc.conf(5) locations (slowest) │ │
-               │ └────────────────────────────────────────────────────────────────────┘ │
-               ├────────────────────────────────────────────────────────────────────────┤
+               │ └--------------------------------------------------------------------┘ │
+               ├------------------------------------------------------------------------┤
                │                          [  OK  ]     [Cancel]                         │
-               └────────────────────── Press arrows, TAB or ENTER ──────────────────────┘
+               └---------------------- Press arrows, TAB or ENTER ----------------------┘
 ```
 
 
@@ -809,11 +809,11 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 此菜单能让你配置系统启动配置的各个方面。
 
 ```sh
-             ┌──────────────────────┤Miscellaneous Startup Services├──────────────────────┐
+             ┌----------------------┤Miscellaneous Startup Services├----------------------┐
              │ This menu allows you to configure various aspects of your system's         │
              │ startup configuration.  Use [SPACE] or [ENTER] to select items, and        │
              │ [TAB] to move to the buttons.  Select Exit to leave this menu.             │
-             │ ┌────────────────────────────────────────────────────────────────────────┐ │
+             │ ┌------------------------------------------------------------------------┐ │
              │ │  X Exit               Exit this menu                                   │ │
              │ │                        --                                              │ │
              │ │  1 [X] Startup dirs   Set the list of dirs to look for startup scripts │ │
@@ -825,10 +825,10 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
              │ │                        --                                              │ │
              │ │  7 [ ] Accounting     This host wishes to run process accounting.      │ │
              │ │  8 [ ] lpd            This host has a printer and wants to run lpd.    │ │
-             │ └────────────────────────────────────────────────────────────────────────┘ │
-             ├────────────────────────────────────────────────────────────────────────────┤
+             │ └------------------------------------------------------------------------┘ │
+             ├----------------------------------------------------------------------------┤
              │                            [  OK  ]     [Cancel]                           │
-             └──────────────────────── Press arrows, TAB or ENTER ────────────────────────┘
+             └------------------------ Press arrows, TAB or ENTER ------------------------┘
 ```
 
 使用 [空格键] 或 [回车键] 选择项目，使用 [TAB] 移动到按钮。选择 Exit 以离开此菜单。
@@ -852,7 +852,7 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
 ## D Ttys TTY
 
 ```sh
-                  ┌───────────────────┤User Confirmation Requested├───────────────────┐
+                  ┌-------------------┤User Confirmation Requested├-------------------┐
                   │ Configuration of system TTYs requires editing the /etc/ttys file. │
                   │ Typical configuration activities might include enabling getty(8)  │
                   │ on the first serial port to allow login via serial console after  │
@@ -861,9 +861,9 @@ FreeBSD 还支持多个“虚拟控制台”，你可以使用它们同时进行
                   │ configuration.                                                    │
                   │                                                                   │
                   │ To load /etc/ttys in the editor, select [Yes], otherwise, [No].   │
-                  ├───────────────────────────────────────────────────────────────────┤
+                  ├-------------------------------------------------------------------┤
                   │                       [ Yes  ]     [  No  ]                       │
-                  └─────────────────── Press arrows, TAB or ENTER ────────────────────┘
+                  └------------------- Press arrows, TAB or ENTER --------------------┘
 
 系统 TTY 的配置需要编辑 /etc/ttys 文件。典型的配置活动可能包括启用第一个串口上的 getty(8)，以允许在重启后通过串口控制台登录，或者启用 xdm。默认的 ttys 文件启用了正常的虚拟控制台，大多数站点无需进行手动配置。
 
